--- a/src/0-Preamble/acknowledgementsFile.tex
+++ b/src/0-Preamble/acknowledgementsFile.tex
@@ -2,4 +2,4 @@ First, I would like to thank my parents for their continued support throughout m
 
 Secondly, I would like to thank my advisor, Scott Banks. He has truly been something of a second dad to me as I navigate through graduate school and my future career. Though most conversations seem to revolve around either beer, music, or hiking, we seem to have gotten quite a lot done.
 
-Third, I would like to thank my Fiancee, Lauren. Though busy with medical school, she still takes the time to understand my research and offer support outside of academics.
+Third, I would like to thank my wife, Lauren. Though busy with medical school, she still takes the time to understand my research and offer support outside of academics.
