Adding some information about latent generative models.

--- a/src/aim3/aim3.tex
+++ b/src/aim3/aim3.tex
@@ -27,7 +27,7 @@ And so, the following chapter will contain some background information toward so
 \input{src/aim3/latent-kinematics-space}
 
 
-\section{Toward Generatic Synthetic Biomechanics Data}
+\section{Toward Generating Synthetic Biomechanics Data}
 \label{sec:synthetic-biomechanics-data}
 \input{src/aim3/synthetic-data}
 
