--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -10584,6 +10584,22 @@
   file = {/home/ajj/references/docs/Yashbir Singh et al-2023_Topological data analysis in medical imaging/Yashbir Singh et al. - 2023 - Topological data analysis in medical imaging curr.pdf}
 }
 
+@book{yeGeometryDeepLearning2022,
+  title = {Geometry of {{Deep Learning}}: {{A Signal Processing Perspective}}},
+  shorttitle = {Geometry of {{Deep Learning}}},
+  author = {Ye, Jong Chul},
+  year = {2022},
+  series = {Mathematics in {{Industry}}},
+  volume = {37},
+  publisher = {{Springer Nature Singapore}},
+  address = {{Singapore}},
+  doi = {10.1007/978-981-16-6046-7},
+  urldate = {2023-12-23},
+  isbn = {9789811660450 9789811660467},
+  langid = {english},
+  file = {/home/ajj/references/docs/Ye-2022_Geometry of Deep Learning/Ye_2022_Geometry of Deep Learning.pdf}
+}
+
 @article{yerushalmyStatisticalProblemsAssessing1947,
   title = {Statistical {{Problems}} in {{Assessing Methods}} of {{Medical Diagnosis}}, with {{Special Reference}} to {{X-Ray Techniques}}},
   author = {Yerushalmy, Jacob},
