from winter break

--- a/src/aim3/latent-kinematics-space.tex
+++ b/src/aim3/latent-kinematics-space.tex
@@ -18,6 +18,8 @@ For simplicity, we can assume that this space $\mathcal{X}_{mvt}$ follows some d
 The ``latent space'' of our kinematics is $\mathcal{Z}$ and follows some fixed distribution, $\xi$.
 For a universal translator, wherein the expressiveness of outputs resembles the underlying musculoskeletal system of that particular patient, you would not have a latent space for each movement, ($\mathcal{Z}_{mvt}$), but rather, the single latent space would (hopefully) encode all relevant information about the patient.
 
+Mathematically, we can view some translator function, $T$, typically recommended as some neural network with parameters $\Theta$.
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../../Jensen-Lit-Review"
