some changes from home laptop

--- a/src/aim3/synthetic-data.tex
+++ b/src/aim3/synthetic-data.tex
@@ -6,3 +6,8 @@ The lack of standardization of kinematics measurements, as well as consistently 
 One of the main benefits of having a tool to easily, accurately, and autonomously measure kinematics data is that the door will be open to creating standard procedures for these measurements.
 The next steps toward utilizing this technology in a clinical setting will be establishing a framework for all clinicians and researchers to use when performing a kinematics evaluation.
 With the spread of anonymized health datasets, a kinematics dataset containing thousands of patients all performing the same activities, and each having the same post-operative metrics recorded, would pave the way for quantitative assessment and correlation of kinematics data to outcome.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Jensen-Lit-Review"
+%%% End:
