--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -395,7 +395,7 @@
   urldate = {2023-12-02},
   abstract = {Apoptosis is a process of programmed cell death occurring in multicellular organisms in whom development, maintenance and sculpturing organs and tissues. Taken together, apoptotic processes are of widespread biological significance; being involved in e.g. development, differentiation, proliferation/homoeostasis, regulation and function of the immune system and in the removal of defected harmful cells. Dys regulation of apoptosis can play a primary or secondary role leading to cancer whereas excessive apoptosis contributes to neuro degeneration, autoimmunity, AIDS, and ischemia. Gaining insight into the techniques for detecting apoptotic cells will allow the development of more effective, higher specific and therefore better-tolerable therapeutic approaches. The goal of this review article is to provide a general overview of current knowledge, on the various technical approaches for detecting apoptotic cells.},
   langid = {english},
-  file = {/home/ajj/references/docs/Archana et al-2013_Various methods available for detection of apoptotic cells- A review/Archana et al. - 2013 - Various methods available for detection of apoptot.pdf}
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Archana et al-2013_Various methods available for detection of apoptotic cells- A review/Archana et al. - 2013 - Various methods available for detection of apoptot.pdf}
 }
 
 @article{argensonVivoDeterminationKnee2002,
@@ -3868,7 +3868,7 @@
   doi = {10.1007/s10495-013-0848-0},
   urldate = {2023-11-30},
   langid = {english},
-  file = {/home/ajj/references/docs/Herold et al-2013_Apoptotic pathways in adipose tissue/Herold et al. - 2013 - Apoptotic pathways in adipose tissue.pdf}
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Herold et al-2013_Apoptotic pathways in adipose tissue/Herold et al. - 2013 - Apoptotic pathways in adipose tissue.pdf}
 }
 
 @article{hinmanHipMuscleWeakness2010,
@@ -4175,7 +4175,7 @@
   urldate = {2023-10-25},
   abstract = {The Hausdorffdistancemeasures the extent to which each point of a ``model'' set lies near some point of an ``image'' set and vice versa. Thus, this distance can he used to determine the degree of resemblance between two objects that are superimposed on one another.In this paper, we provide efkient algorithmsfor computing the Hausdorff distance between all possible relative positions of a binary image and a model. We focus primarily on the case in which the model is only allowed to translate with respect to the image. Then, we consider how to extend the techniques to rigid motion (translation and rotation). The Hausdorff distance computation differs from many other shape comparison methods in that no correspondence between the model and the image is derived. The method is quite tolerant of small position errors such as those that occur with edge detectors and other feature extraction methods. Moreover, we show how the method extends naturally to the problem of comparing a portion of a model against an image.},
   langid = {english},
-  file = {/home/ajj/references/docs/Huttenlocher et al-1993_Comparing images using the Hausdorff distance/Huttenlocher et al. - 1993 - Comparing images using the Hausdorff distance.pdf}
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Huttenlocher et al-1993_Comparing images using the Hausdorff distance/Huttenlocher et al. - 1993 - Comparing images using the Hausdorff distance.pdf}
 }
 
 @article{huttenlocherMultiresolutionTechniqueComparing1993,
@@ -10454,7 +10454,7 @@
   urldate = {2023-12-02},
   abstract = {Adipose tissue mass is determined by the volume and the number of adipocytes and is subjected to homeostatic regulation involving cell death mechanisms. We investigated the effects of esculetin, a coumarin compound, on apoptotic signaling in 3T3-L1 adipocytes. Esculetin treatment induced an increase in expression of Bax with a concomitant decrease of Bcl-2 in a time-dependent manner. Esculetin treatment also resulted in translocation of cytochrome c from mitochondria to cytosol and cleavage of 116 kDa poly(ADPribose) polymerase (PARP)-1, resulting in the accumulation of an 85 kDa cleavage product in a caspase-dependent manner. Furthermore, esculetin selectively altered the phosphorylation state of members of the MAPK superfamily, causing dephosphorylation of extracellular signal-regulating kinase 1/2 (ERK1/2) and hyperphosphorylation of c-JunN-terminal kinase (JNK). In addition, an inhibitor of the JNK MAP kinase pathway, SP600125, reduced esculetininduced cytochrome c release. These results indicate that esculetin mediated adipocyte apoptosis involves the mitochondrial pathway. Esculetin thus decreases adipocyte number by initiating this apoptotic process in 3T3-L1 adipocytes.},
   langid = {english},
-  file = {/home/ajj/references/docs/Yang et al-2006_Esculetin induces mitochondria-mediated apoptosis in 3T3-L1 adipocytes/Yang et al. - 2006 - Esculetin induces mitochondria-mediated apoptosis .pdf}
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Yang et al-2006_Esculetin induces mitochondria-mediated apoptosis in 3T3-L1 adipocytes/Yang et al. - 2006 - Esculetin induces mitochondria-mediated apoptosis .pdf}
 }
 
 @inproceedings{yangExposingGANsynthesizedFaces2019,
