Adding aim 4 to dis writing

--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -37,7 +37,7 @@
 \major{Mechanical Engineering}%                    Your official Department
 \author{Andrew James Jensen}%                  Your Name
 \thesisType{Dissertation}%              Dissertation (PhD) or Thesis (Masters)
-\degreeYear{2023}%                      Intended graduation year (not the year you submit the thesis)
+\degreeYear{2024}%                      Intended graduation year (not the year you submit the thesis)
 \degreeMonth{March}%                   Month of graduation should be May, August, or December.
 \chair{Scott Banks}%                   Chair and Cochair (see comment block above).
 
@@ -85,6 +85,7 @@
 \include{src/JTML/chX-jtml}
 \include{src/SymTrap/sym_trap_paper}
 \include{src/aim3/aim3}
+\include{src/aim4-shape-sensitivity/aim4}
 %\chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
 %\input{editorAndAuthorRemarks}%     Stuff about using editorRemark and authorRemark commands
 %\input{includingTablesExamples}%    Stuff about using Tables.
