Edited dedication files

--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -69,6 +69,7 @@
 %\multipleAppendixtrue%                          Uncomment this if you have more than one appendix, 
 %                                                   comment it if you have only one appendix.
 
+\DeclareUnicodeCharacter{0134}{\latincross}
 
 %%%%%%%                     End of File Assignment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
