--- a/src/0-Preamble/dedicationFile.tex
+++ b/src/0-Preamble/dedicationFile.tex
@@ -1,1 +1,6 @@
-Dedication placeholder.
+I would like to dedicate this to my wife, Lauren, my parents, Robin and Erik, and my Lord and Savior, Jesus Christ †.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Jensen-Lit-Review"
+%%% End:
