--- a/src/aim4-shape-sensitivity/aim4.tex
+++ b/src/aim4-shape-sensitivity/aim4.tex
@@ -2,7 +2,13 @@
 
 \section{Introduction}
 Another common arthroplasty (TSA) procedure is total shoulder replacement, which involves the removal and replacement of the distal end of the glenoid/scapula and the proximal end of the humeral head.
-And, for many of the reasons that researchers, implant manufacturers, and surgeons are interested in quantifying post-op TKA kinematics, they are also interested in exploring post-op TSA kinematics.
+For many of the reasons that researchers, implant manufacturers, and surgeons are interested in quantifying post-op TKA kinematics, they are also interested in exploring post-op TSA kinematics.
+Though the exact numbers differ from TKA outcomes, there is still a large percentage of patients receiving TSA that express dissatisfaction, citing main mechanical limitations or instability as the primary causes.
+
+For the past twenty years, researchers have explored both anatomical and reverse total shoulder arthroplasty kinematics \cite{kijimaVivo3dimensionalAnalysis2015,matsukiVivo3DAnalysis2014,matsukiDynamicVivoGlenohumeral2012,sugiComparingVivoThreedimensional2021,burtonFullyAutomaticTracking2023}, attempting to draw connections between different implants and surgical techniques to postoperative shoulder dynamics and range of motion.
+For the same reasons that a reliable, fast, clinically practical, and fully-autonomous kinematics measurement platform would be desirable for clinicians operating on post-operative total knee arthroplasty (\cref{sec:jtml}), it would also be desirable for clinicians working on total shoulder arthroplasty.
+
+
 \section{Improving Model-Image Registration}
 \input{src/aim4-shape-sensitivity/new-metrics}
 \section{2D Shape Projection Sensitivity Analysis}
