Fixing aims, adding aim 4

--- a/src/0-Preamble/abbreviations.tex
+++ b/src/0-Preamble/abbreviations.tex
@@ -3,6 +3,8 @@
 \begin{tabular}{l p{5in}} 
 %if the terms in the first column are longer than 1.4 inches reduce the number 5 appropriately
 TKA & Total Knee Arthroplasty. This is the complete or partial resurfacing of the articulating surfaces in the knee.\\
+  \\
+  TSA & Total Shoulder Arthroplasty. This is the complete resurfacing of the articular surfaces in the shoulder. \\
 \\
 ML & Machine Learning. This is the process of feeding a computer inputs and outputs in order to determine an algorithm that goes from input $\longrightarrow$ output\\
 \\
@@ -13,3 +15,8 @@ HRNet & High Resolution Convolutional Neural Network \cite{wangDeepHighResolutio
 \end{tabular}
 
 \doublespacing
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Jensen-Lit-Review"
+%%% End:
