--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -1,25 +1,22 @@
 \chapter{The Aims of this Dissertation}
 \label{sec:aims}
 
-\section{Aim 1: Validating an Autonomous Pipeline for Measuring Total Knee Arthroplasty Kinematics from Single Plane Fluoroscopic Images}
+\section{Aim 1: Joint Track Machine Learning: An Autonomous Method of Measuring 6-DOF TKA Kinematics from Single-Plane Fluoroscopic Images}
 \label{sec:aim1}
 \input{src/2-aims/aim1.tex}
 
-\section{Aim 2: Overcoming Inherent Single Plane Limitations When Measuring Total Knee Arthroplasty Kinematics}
+\section{Aim 2: Correcting Symmetric Implant Ambiguity in Measuring Total Knee Arthroplasty Kinematics from Single-Plane Fluoroscopy}
 \label{sec:aim2}
 \input{src/2-aims/aim2.tex}
 
-\section{Aim 3: Pilot Trial of Application on Series of Patients}
+\section{Aim 3: Musings on Latent Kinematics Space and Synthetic Biomechanics Data}
 \label{sec:aim3}
 \input{src/2-aims/aim3.tex}
 
-\section{Aim 4: Standardizing Kinematic Examination Protocols Using Novel Machine Learning Methods}
+\section{Aim 4: This Will Definitely Work on Shoulder Implants, Right?}
 \label{sec:aim4}
 \input{src/2-aims/aim4.tex}
 
-\section{Aim 5: Joint Track Auto Toolkit: An Open Source Framework for Model-Image Registration}
-\label{sec:aim5}
-\input{src/2-aims/aim5.tex}
 
 
 %%% Local Variables:
