--- a/src/2-aims/aim4.tex
+++ b/src/2-aims/aim4.tex
@@ -1,10 +1,2 @@
-After the pipeline has been utilized in a pilot study determining the efficacy of utilizing measurements in a clinical setting, we hope to refine the kinematic examination protocol in order to establish a standardized set of measurements that can give the most information to the surgeons. The overarching goal is to find the movements and stances that provide the most information about post-operative outcome, and to offer a robust series of movements that can be measured in any hospital with any imaging equipment. Historically, these movements has been decided by the researchers somewhat arbitrarily; we hope to make an improvement to the standard of care by rigorously determining which movements provide the best ``bang for your buck''.
-
-\subsection{The Movements}
-First, we are going to measure movements spanning the entire spectrum of imaging possibilities. Normal dynamic movements like walking, lunging, sit-to-stand, stair rise, stair descent, squatting, open-chain extension with the hip in flexion, neural, or extension positions, among others. Similarly, a wide array of static images will be taken, including those at maximum flexion and extension, weight and non-weight bearing, and during other static positions. We will cover the array of movements that patients cite as ``unstable'' or ``uncomfortable'', and hopefully span every possible pathology with multiple static and dynamic images.
-
-\subsection{Statistical Analysis}
-
-One of the most recently developments in machine learning is Transformers. These new foundational networks utilize attention blocks in place of recurrent neural networks or convolutional neural networks in order to process time-series data \cite{vaswaniAttentionAllYou2017}. One of the most interesting areas where these networks are highly performant is translation; both between languages, as well as image-to-text \cite{dosovitskiyImageWorth16x162021}. Key to the idea of translation is the notion of the ``essence'' of an ``idea'' (in the Platonic form) having multiple real-world instantiations. Specifically, there is an underlying meaning to a sentence or image that can be represented by words in another language. So, using this paradigm, is there an underlying ``idea'' present in a parametrized kinematic measurement that might be represented in either pathology, outcome or other measurement?
-
-This aim seeks to answer the following questions: (1) can a transformer-based architecture be used to ``translate'' between parametrized representations of kinematic motion into another movement by the same patient, and can statistical salience between movements be inferred from an exploration into these networks? (2) Can these kinematic examinations be used to statistically infer post-operative outcome? (3) Can the total number of measurements necessary to generate an accurate post-operative prediction be minimized by clustering different movements?
+The final aim outlines the process of applying the autonomous kinematics measurement platform to total shoulder arthroplasty (TSA) implants.
+Major shortcomings are discussed, as well as multiple avenues forward that bring analysis down to geometric first principles.
