--- a/src/2-aims/aim3.tex
+++ b/src/2-aims/aim3.tex
@@ -1,5 +1,11 @@
-With the feasibility of an autonomous pipeline established, and single-plane limitations corrected, the final step is determining whether this pipeline is actually possible tto use in a clinical workflow.
+The third aim of this thesis aims to express some of the non-publishable thoughts that the author has on his attempts to define a robust ``kinematics translator'', which would, for example, ``translate'' a patients ``stair rise'' kinematics into ``walking'' kinematics.
+Additionally, the author explores many of the issues in the lack of standardization among different groups measuring TKA kinematics, and why that lack of standardization will make consistent clinical applications difficult.
+He hopes this chapter is useful for others in this space to establish research protocols that can bring kinematics into both the clinical sphere and the ``big data'' world.
 
-The third aim of this thesis hopes to test these capabilities on a pilot study measuring the kinematics of knee implants in a series of patients that have received total knee arthroplasty. Each patient will perform a series of tasks, and the time it takes to return a full kinematic evaluation will be reported, along with any areas that necessitated human supervision. The hypothesis of this aim is that the only areas that will require human supervision will be data-transfer to Joint Track Machine Learning, and post-processing in order to get useful results from the output kinematics. We will also use a human supervised method of measuring TKA kinematics to determine the difference between kinematics and the difference in time to examination report.
+Ultimately, the hope is that there can be a standard operating procedure for measuring kinematics, such that the resultant measurements have post-operative predictive power with respect to function, stability, and modes of failure.
 
-By establishing and benchmarking the difference in both time and levels of supervision required to generate a kinematic report, we hope to alleviate concerns over using this in the clinic.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Jensen-Lit-Review"
+%%% End:
